customize manifest.json for form page.

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,7 +8,11 @@
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
+    <!--
+      为了定制 form view 页面的 manifest，我们在 App component 中用 react-helmet
+      动态生成 manifest link 了。
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+    -->
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
